[project]
name = "myblog-backend"
version = "0.1.0"
description = "Backend for unique蚊子的blog"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.0",
    "flask-migrate>=4.0.0",
    "flask-cors>=4.0.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools]
packages = ["app"]

